# land_cover_simulation

urban_land_simulation_morelia_case/: Makefile  README.md  pyproject.toml
urban_land_simulation_morelia_case/documentation/sphinx-tovsvtoc/docs/: conf.py
urban_land_simulation_morelia_case/documentation/sphinx-tovsvtoc/docs/_build/doctrees/: environment.pickle  index.doctree  module1.doctree  module2.doctree
urban_land_simulation_morelia_case/documentation/sphinx-tovsvtoc/docs/_build/html/: .buildinfo  index.html  module1.html  objects.inv  py-modindex.html  searchindex.js
urban_land_simulation_morelia_case/documentation/sphinx-tovsvtoc/src/: dummy.py  toccompare.py  tutorial ootoc.ipynb
urban_land_simulation_morelia_case/documentation/sphinx-tovsvtoc/src/bk/: toc.py
urban_land_simulation_morelia_case/models/: modelos_cambio_suelo.py
urban_land_simulation_morelia_case/notebooks/figuras/: Untitled.ipynb
urban_land_simulation_morelia_case/src/: report_functions.py  toc.py
