[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "urban_land_simulation_morelia_case"
version = "0.0.1"
description = "Code for simulating urban land cover of morelia using land information of 2 time intervals"
authors = [
  { name = "Rodrigo Lopezez-Farias" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["urban_land_simulation_morelia_case"]
force_sort_within_sections = true
